# python-sql-executor

./: README.md  pyproject.toml
src/sql_executor/: __main__.py
