[tool.poetry]
name = "sql-executor"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
sql-executor = "sql_executor.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
